# Cuda-Notebook

./: .gitignore  CMakeLists.txt  LICENSE  README.md  conandata.yml  main.cpp  vcpkg.json
check_configuration/: CMakeLists.txt  check.cu
common/: GpuTimer.h  Initializer.h  common.h  error.h  findCudaDevice.cuh
include/: week01.h
note/: thread_index.md
notebook/: Thread Hierarchy and block memory limatation.md  Thread Hierarchy.md
src/: CMakeLists.txt  README.md
src/CUDA-Programming/atomic/: CMakeLists.txt  main.cu
src/CUDA-Programming/basic-framework/: CMakeLists.txt  add.cpp  add1.cu  main.cu
src/CUDA-Programming/error-check/: CMakeLists.txt  main.cu
src/CUDA-Programming/global-memory/: CMakeLists.txt  main.cu
src/CUDA-Programming/memory/: CMakeLists.txt  main.cu  query.cu  static.cu
src/CUDA-Programming/prerequisites-for-speedup/: CMakeLists.txt  add1cpu.cu  add2gpu.cu  main.cu
src/CUDA-Programming/shared-memory/: CMakeLists.txt  main.cu
src/CUDA-Programming/stream/: CMakeLists.txt  main.cu  multi_stream.cu
src/CUDA-Programming/thread-organization/: CMakeLists.txt  hello.cu  main.cu
src/CUDA-Programming/warp/: CMakeLists.txt  main.cu
src/basic/: CMakeLists.txt  add_kernel.cu  add_vector.cu  main.cu
src/check_configuration/: CMakeLists.txt  check_config.cu
src/cublas/: 0-based.cu  1-based.cu  CMakeLists.txt  README.md  based_indexing.cu  handle_ops.cu  main.cu
src/cuda/: README.md
src/cuda-samples/: CMakeLists.txt
src/cuda-samples/0_Introduction/: CMakeLists.txt
src/cuda-samples/0_Introduction/asyncAPI/: CMakeLists.txt  asyncAPI.cu  asyncAPI.cuh  main.cu
src/cuda-samples/0_Introduction/c++11_cuda/: CMakeLists.txt  main.cu
src/cuda-samples/0_Introduction/clock/: CMakeLists.txt  main.cu
src/cuda-samples/0_Introduction/concurrentKernels/: CMakeLists.txt  main.cu
src/cuda-samples/0_Introduction/cppOverload/: CMakeLists.txt  main.cu
src/cuda-samples/0_Introduction/fp16ScalarProduct/: CMakeLists.txt  main.cu
src/cuda-samples/0_Introduction/matrixMul/: CMakeLists.txt  main.cu
src/cuda-samples/0_Introduction/mergeSort/: CMakeLists.txt  main.cu  mergeSortHost.cpp
src/cuda-samples/2_Concepts_and_Techniques/: CMakeLists.txt
src/cuda-samples/2_Concepts_and_Techniques/boxFilter/: CMakeLists.txt  boxFilter.cuh  boxFilter.h  main.cu
src/cuda-samples/2_Concepts_and_Techniques/convolutionSeparable/: CMakeLists.txt  main.cu
src/cuda/image_processing/: Base.cpp  Base.h  CMakeLists.txt  cuda_kernel.cu  cuda_kernel.cuh  image_blur.cpp  image_blur.cu  image_blur.cuh  image_blur.h  image_processing.cuh  main.cpp
src/cuda/neural_network/: CMakeLists.txt  autoencoder.cu  autoencoder.cuh  convolutional_neural_network.cu  convolutional_neural_network.cuh  data_loader.cpp  generative_adversarial_network.cu  generative_adversarial_network.cuh  gradient_descent.cu  gradient_descent.cuh  linear_regression.cu  linear_regression.cuh  main.cpp  main.cu  multilayer_perceptron.cu  multilayer_perceptron.cuh  recurrent_neural_network.cu  recurrent_neural_network.cuh
src/cuda_by_example/: CMakeLists.txt  README.md  julia_gpu.cu  main.cu
src/cudnn/: CMakeLists.txt  conv_cudnn.cu  main.cpp
src/image_processing/: Base.h  CMakeLists.txt  README.md  cuda_kernel.cu  cuda_kernel.cuh  image_blur.cuh  main.cpp
src/matrix_mul/: CMakeLists.txt  main.cu  matmul.cuh  matmul_cpu.cu  matmul_gpu.cu
src/neural_network/: CMakeLists.txt  data_loader.cpp  linear_regression.cu  linear_regression.cuh  main.cu  multilayer_perceptron.cu  multilayer_perceptron.cuh
src/professional-cuda-programming/: CMakeLists.txt
src/professional-cuda-programming/examples/: CMakeLists.txt  checkDeviceInfor.cu  checkThreadIndex.cu  main.cu  sumArraysOnGPU-small-case.cu  sumArraysOnGPU_timer.cu  sumArraysOnHost.cu  sumMatrixOnGPU_1D_grid_1D_block.cu
src/professional-cuda-programming/examples/chapter02/: CMakeLists.txt  checkDimension.cu  defineGridBlock.cu  main.cu  sumArraysOnGPU-small-case.cu  sumArraysOnGPU_timer.cu  sumArraysOnHost.cu  sumMatrixOnGPU-2D-grid-1D-block.cu  sumMatrixOnGPU.cu  sumMatrixOnGPU_2D_grid_2D_block.cu
src/professional-cuda-programming/examples/chapter03/: CMakeLists.txt  main.cu
src/reduction/: CMakeLists.txt  main.cu  reduction_v1.cu  reduction_v2.cu
src/thrust/: CMakeLists.txt  main.cu  seqCuda.cu
src/thrust/Algorithms/: CMakeLists.txt  copy.cu  main.cu  merge.cu
src/vector_addition/baseline/: CMakeLists.txt  vectorAdd.cu
src/vector_addition/pinned_memory/: CMakeLists.txt  vectorAdd_pinned.cu
src/vector_addition/unified_memory/: CMakeLists.txt  vectorAdd_um.cu  vectorAdd_um_baseline.cu  vectorAdd_um_prefetch.cu
src/week01/: CMakeLists.txt  add1dim.cu  add2dim.cu  add3dim.cu  const.cu  event.cu  main.cu  shared.cu  stream.cu  streamhostcopy.cu  thread_index.md  threadfence.cu  transpose.cu
src/week02/: CMakeLists.txt  block_clusters.cu  main.cu
tests/: CMakeLists.txt  test_week01.cu  week01_tests.cu
week01/: CMakeLists.txt  add2dim.cu  add3dim.cu  main.cu  vectorAdd.cu  week01.h
