



# CUDA-Programming
add_subdirectory(CUDA-Programming/thread-organization)
add_subdirectory(CUDA-Programming/basic-framework)
add_subdirectory(CUDA-Programming/error-check)
add_subdirectory(CUDA-Programming/prerequisites-for-speedup)
add_subdirectory(CUDA-Programming/memory)
add_subdirectory(CUDA-Programming/global-memory)
add_subdirectory(CUDA-Programming/shared-memory)
add_subdirectory (CUDA-Programming/atomic)
add_subdirectory(CUDA-Programming/warp)
add_subdirectory(CUDA-Programming/stream)



# professional-cuda-programming
add_subdirectory(professional-cuda-programming)